src/App.css
body {
  font-size: 16px;
}
nav {
  max-width: 100vw;
  font-family: 'Champagne-Limousines';
  font-weight: bold;
  letter-spacing: 1.2px;
}
.paddingAround {
  padding: 15px;
}
.max800 {
  width: 100vw;
  max-width: 800px;
}
.navLogo {
  font-family: 'Champagne-Limousines';
  color: white;
  text-decoration: none;
}

.navLogo:hover {
  text-decoration: none;
}

.nav-item {
  font-size: 1.1rem;
}
footer {
  width: 100vw;
  padding: 15px;
  color: white;
  font-family: 'Champagne-Limousines';
  font-weight: bold;
  letter-spacing: 1.2px;
}
main {
  min-height: 80vh;
  font-family: 'Sen', sans-serif;
}
.socialIcon {
  display: inline;
}
.socialIcon:hover {
  text-decoration: none;
  color: #d4af37;
}
.socialIconRight {
  margin-left: 20px;
}
.socialCol {
  margin-bottom: 20px;
  padding: 0px;
}
.row {
  margin: 0px;
}
.pageTitleBackground {
  margin: 0px;
  padding: 10px;
  background-color: var(--primary);
}
.pageTitle {
  color: white;
  font-family: 'Satisfy', 'Champagne-Limousines', cursive;
  font-size: 3rem;
  font-weight: bold;
  margin: 0px;
  line-height: 150%;
}
.weddingDate {
  font-size: 2rem;
  font-weight: bold;
  letter-spacing: 4px;
}
.content {
  margin-top: 82px;
}

.goldtext {
  background-image: linear-gradient(
    to bottom,
    #462523 2%,
    #cb9b51 25%,
    #f6e27a 40%,
    #f6f2c0 43%,
    #f6e27a 55%,
    #cb9b51 90%,
    #462523
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  position: relative;
  filter: drop-shadow(2px 2px #333);
}
.collage {
  width: 100%;
  max-width: 800px;
}
.eventIcon {
  height: 200px;
  width: auto;
  padding: 10px;
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.eventCol {
  font-weight: normal;
  padding-bottom: 20px;
}
.eventTitle {
  font-family: 'Satisfy', 'Champagne-Limousines', cursive;
  text-align: center;
}
.pageImage {
  height: auto;
  max-width: 100%;
}
.collage {
  height: auto;
  max-width: 100%;
}
.welcomeMessage {
  padding-top: 30px;
  padding-bottom: 30px;
}
.formBtn {
  color: white;
  background-color: var(--primary);
}
.formBtn:hover,
.formBtn:focus {
  color: var(--primary);
  background-color: white;
  border: 1px solid var(--primary);
}
.form {
  max-width: 600px;
}
.form-group {
  margin-bottom: 15px;
}
.iconCol {
  margin-bottom: 15px;
}
.iconLink:hover {
  text-decoration: none;
  color: #d4af37;
}

.countdown {
  color: white;
  box-sizing: border-box;
}
.countdown-title {
  letter-spacing: 2px;
  text-align: center;
  text-transform: uppercase;
}
.countdown-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.countdown-item {
  color: #fff;
  font-size: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  line-height: 30px;
  margin: 10px;
  padding-top: 10px;
  position: relative;
  width: 100px;
  height: 100px;
}
.countdown-item span {
  color: #fff;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
}
.countdown-svg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100px;
  height: 100px;
  box-sizing: border-box;
}

@media (min-width: 768px) {
  body {
    font-size: 18px;
  }
  .paddingAround {
    padding: 30px;
  }
  footer {
    padding: 30px;
  }
  .pageTitleBackground {
    padding: 30px;
  }
  .pageTitle {
    font-size: 5rem;
  }
  .weddingDate {
    font-size: 4rem;
  }
}

@font-face {
  font-family: 'Champagne-Limousines';
  src: url('./fonts/Champagne-Limousines.ttf.woff') format('woff'),
    url('./fonts/Champagne-Limousines.ttf.svg#Champagne-Limousines')
      format('svg'),
    url('./fonts/Champagne-Limousines.ttf.eot'),
    url('./fonts/Champagne-Limousines.ttf.eot?#iefix')
      format('embedded-opentype');
  font-weight: normal;
  font-style: normal;
}
@import url('https://fonts.googleapis.com/css?family=Montserrat|Satisfy&display=swap');
@import url('https://fonts.googleapis.com/css?family=Sen&display=swap');

